--- a/much-notes-api/src/main/resources/application-jdbc.yml
+++ b/much-notes-api/src/main/resources/application-jdbc.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/much_notes?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1:3306/much_notes?useSSL=false&useUnicode=true&characterEncoding=utf8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
     username: root
     password: root123
     driverClassName: com.mysql.jdbc.Driver  #配置JDBC Driver
