--- a/much-notes-api/src/main/resources/application.yml
+++ b/much-notes-api/src/main/resources/application.yml
@@ -8,10 +8,13 @@ spring:
 
 logging:
   level:
-    root: ERROR
+    root: WARN
     xyz:
       flysium:
         dao: INFO
+    org:
+      springframework: INFO
+      mybatis: WARN
     com:
       alibaba:
         druid: INFO
